--- a/index.html
+++ b/index.html
@@ -65,3 +65,18 @@
 -->
 
 <!-- 👩🏻‍✈️لا تنسى إنت قدها -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <script src="./scripts.js"></script>
+</body>
+</html>
